development/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  template:
    spec:
      containers:
      - name: website
        imagePullPolicy: Always
        image: nginx:latest
        resources:
          limits:
            cpu: 100m
