development/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
spec:
  rules:
  - host: kavoyo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 80
